@@ -168,15 +168,26 @@ CONFIG_SAMA5_USART1=y
 # External Memory Configuration
 #
 # CONFIG_SAMA5_DDRCS is not set
-# CONFIG_SAMA5_EBICS0 is not set
+CONFIG_SAMA5_EBICS0=y
+CONFIG_SAMA5_EBICS0_SIZE=134217728
+# CONFIG_SAMA5_EBICS0_SRAM is not set
+# CONFIG_SAMA5_EBICS0_PSRAM is not set
+# CONFIG_SAMA5_EBICS0_PROM is not set
+# CONFIG_SAMA5_EBICS0_EEPROM is not set
+# CONFIG_SAMA5_EBICS0_EPROM is not set
+# CONFIG_SAMA5_EBICS0_LCD is not set
+CONFIG_SAMA5_EBICS0_NOR=y
+# CONFIG_SAMA5_EBICS0_NAND is not set
 # CONFIG_SAMA5_EBICS1 is not set
 # CONFIG_SAMA5_EBICS2 is not set
 # CONFIG_SAMA5_EBICS3 is not set
-CONFIG_SAMA5_BOOT_ISRAM=y
+# CONFIG_SAMA5_BOOT_ISRAM is not set
+CONFIG_SAMA5_BOOT_CS0FLASH=y
 
 #
 # Heap Configuration
 #
+CONFIG_SAMA5_ISRAM_HEAP=y
 
 #
 # Architecture Options
@@ -199,9 +210,6 @@ CONFIG_ARCH_STACKDUMP=y
 #
 CONFIG_BOARD_LOOPSPERMSEC=16717
 # CONFIG_ARCH_CALIBRATION is not set
-CONFIG_RAM_START=0x00300000
-CONFIG_RAM_VSTART=0x00300000
-CONFIG_RAM_SIZE=114688
 CONFIG_ARCH_HAVE_INTERRUPTSTACK=y
 CONFIG_ARCH_INTERRUPTSTACK=0
 
@@ -209,10 +217,20 @@ CONFIG_ARCH_INTERRUPTSTACK=0
 # Boot options
 #
 # CONFIG_BOOT_RUNFROMEXTSRAM is not set
-# CONFIG_BOOT_RUNFROMFLASH is not set
-CONFIG_BOOT_RUNFROMISRAM=y
+CONFIG_BOOT_RUNFROMFLASH=y
+# CONFIG_BOOT_RUNFROMISRAM is not set
 # CONFIG_BOOT_RUNFROMSDRAM is not set
 # CONFIG_BOOT_COPYTORAM is not set
+
+#
+# Boot Memory Configuration
+#
+CONFIG_RAM_START=0x00304000
+CONFIG_RAM_VSTART=0x00304000
+CONFIG_RAM_SIZE=114688
+CONFIG_FLASH_START=0x1000000
+CONFIG_FLASH_VSTART=0x1000000
+CONFIG_FLASH_SIZE=134217728
 
 #
 # Board Selection
