@@ -184,6 +184,12 @@ int main(int argc, char **argv, char **envp)
   printf("#ifndef CONFIG_RAM_END\n");
   printf("# define CONFIG_RAM_END (CONFIG_RAM_START+CONFIG_RAM_SIZE)\n");
   printf("#endif\n\n");
+  printf("/* If the end of FLASH is not specified then it is assumed to be the beginning\n");
+  printf(" * of FLASH plus the FLASH size.\n");
+  printf(" */\n\n");
+  printf("#ifndef CONFIG_FLASH_END\n");
+  printf("# define CONFIG_FLASH_END (CONFIG_FLASH_START+CONFIG_FLASH_SIZE)\n");
+  printf("#endif\n\n");
   printf("/* If no file streams are configured, then make certain that buffered I/O\n");
   printf(" * support is disabled\n");
   printf(" */\n\n");
